--- a/.github/workflows/bulid.yml
+++ b/.github/workflows/bulid.yml
@@ -29,7 +29,7 @@ jobs:
 	
     # Step 5: Upload the bulid artifacts (Optional, to keep bulid outputs)
     - name: Upload bulid artifact
-      uses: action/upload-artifact@v3
+      uses: actions/upload-artifact@v3
       with:
 	name: compiled-binary
 	path: ./test # Path to the compiled binary
